# ast-interpreter

./: ASTInterpreter.cpp  CMakeLists.txt  Environment.h  README.md
mytests/: mytest00.c  mytest01.c
tests/: test01.c  test02.c  test12.c  test15.c  test17.c  test18.c  test19.c  test20.c  test21.c  test22.c  test23.c  test24.c
